k8s/deployment.yaml
# /k8s/deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: flask-app
  template:
    metadata:
      labels:
        app: flask-app
    spec:
      containers:
      - name: flask-app
        image: 123456789012.dkr.ecr.region.amazonaws.com/repository_name:latest
        ports:
        - containerPort: 5000
